a little too much gold... fixed now.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -455,7 +455,6 @@ $section-divider-default: section-divider-default.png
 // Navigation Pills
 
 ul.nav.nav-pills {
-  background: linear-gradient(180deg,#644227,#785e2e,#9a843a,#d2be5e,#030004);
   position: relative;
   padding-top: 5px;
   &:before {
